# DeveloperHub_Intern-2nd-Tasks

01_financial_anomaly_detection/: README.md  main.py
01_financial_anomaly_detection/src/: main.py
02_emotion_recognition/: requirements.txt
02_emotion_recognition/src/: data_preprocess.py  evaluate.py
03_deforestation_monitoring/: README.md  requirements.txt
03_deforestation_monitoring/src/: change_detection.py  data_preprocess.py  train.py  visualization.py
04_credit_risk_analysis/: README.md  requirements.txt
04_credit_risk_analysis/src/: data_preprocess.py  evaluate.py  feature_engineering.py  predict.py  train.py
emotion_recognition/: README.md
emotion_recognition/src/: predict.py  train.py
financial_anomaly_detection/: pyproject.toml  requirements.txt
financial_anomaly_detection/src/: anomaly_detection.py  data_fetch.py  forecasting.py  indicators.py  visualization.py
